[package]
name = "cbct_preset_selector"
version = "0.1.0"
authors = ["Tom Vercauteren <tomvercaut@gmail.com>"]
edition = "2018"
description = "Determine a cone beam CT preset based on the linear accelerator and pathology."
license = "MIT/Apache-2.0"
repository = "https://github.com/tomvercaut/cbct_preset_selector"
homepage = "https://github.com/tomvercaut/cbct_preset_selector"
readme = "README.md"
keywords = [
    "CBCT",
    "preset"
]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
]

[[bin]]
name = "cbct_preset_selector"
path = "src/main.rs"

[dependencies]
clap = "2.33.1"
console = "0.11.3"
log = "0.4.8"
simple_logger = "1.6.0"
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
csv = "1.1.3"
dirs = "3.0"
